2010-03-25  Andreas Schwab  <schwab@redhat.com>

	* sysdeps/posix/getaddrinfo.c (gaih_inet): Reset no_data before
	each action.

2010-03-26  Ulrich Drepper  <drepper@redhat.com>

	* malloc/malloc.c: Remove stale reference to website.

2010-03-24  Ulrich Drepper  <drepper@redhat.com>

	[BZ #11389]
	* bits/time.h: Define CLOCK_MONOTONIC_RAW, CLOCK_REALTIME_COARSE, and
	CLOCK_MONOTONIC_COARSE.
	* sysdeps/unix/sysv/linux/clock_getres.c: Handle CLOCK_MONOTONIC_RAW,
	CLOCK_REALTIME_COARSE, and CLOCK_MONOTONIC_COARSE.
	* sysdeps/unix/sysv/linux/clock_gettime.c: Likewise.
	* sysdeps/unix/sysv/linux/clock_settime.c: Likewise.

2010-03-25  Andreas Schwab  <schwab@redhat.com>

	* sysdeps/posix/cuserid.c: Fix typo.

2010-03-16  Chris Demetriou  <cgd@google.com>

	[BZ #11394]
	* locale/programs/simple-hash.c: Include inttypes.h.
	(hashval_t): Defined to be uint32_t.
	* locale/programs/simple_hash.h: Include inttypes.h.
	(compute_hashval): Change return type to uint32_t.

2010-03-24  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/getlogin_r.c: New file.
	* sysdeps/unix/sysv/linux/getlogin.c: New file.
	* sysdeps/unix/getlogin_r.c: Allow compiling getlogin as static
	function.
	* sysdeps/unix/getlogin.c: Likewise.  Move name variable to toplevel.
	* include/unistd.h: Declare __getlogin_r_loginuid.

	[BZ #11397]
	* sysdeps/posix/cuserid.c (cuserid): Make sure the returned string
	is NUL terminated.
	Patch by Jonathan Geisler <jgeisler@cse.taylor.edu>.

	* sysdeps/unix/sysv/linux/mmap64.c: Allow variable shift values.

2010-03-24  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/x86_64/multiarch/strpbrk-c.c: Define only if SHARED
	is defined.

2010-03-22  H.J. Lu  <hongjiu.lu@intel.com>

	* string/test-memcmp.c (check_result): New function.
	(do_one_test): Use it.
	(check1): New function.
	(test_main): Use it.

2010-03-24  Ulrich Drepper  <drepper@redhat.com>

	* posix/tst-gnuglob.c: Add tests with empty patterns.  For this